# py-to-exe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/py_to_exe/: __main__.py  analyzer.py  cli.py  core.py  doctor.py  errors.py  known_imports.py  output.py  tui.py
src/py_to_exe/engines/: __init__.py  base.py  pyinstaller.py
tests/: test_analyzer.py  test_cli.py  test_doctor.py  test_engines.py  test_errors.py
tests/fixtures/: gui_script.py  requests_script.py  simple_script.py
