[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-py-to-exe"
version = "0.1.0"
description = "Convert Python scripts to standalone executables. One command. Zero config."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "python to exe",
    "py to exe",
    "convert python to executable",
    "pyinstaller",
    "standalone executable",
    "python executable",
    "pyinstaller wrapper",
    "freeze python",
    "bundle python",
    "python packaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
]

[project.optional-dependencies]
pyinstaller = ["pyinstaller>=6.0"]
dev = ["pytest", "ruff"]

[project.scripts]
py-to-exe = "py_to_exe.cli:main"

[project.urls]
Homepage = "https://github.com/zizhu-ai/py-to-exe"
Repository = "https://github.com/zizhu-ai/py-to-exe"
Issues = "https://github.com/zizhu-ai/py-to-exe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_to_exe"]
